@@ -134,6 +134,7 @@
     <string name="error_otp_digits">Token must contain %1$d to %2$d digits.</string>
     <string name="error_string_type">This text does not match the requested item.</string>
     <string name="error_registration_read_only">Saving a new item is not allowed in a read-only database</string>
+    <string name="error_field_name_already_exists">The field name already exists.</string>
     <string name="field_name">Field name</string>
     <string name="field_value">Field value</string>
     <string name="file_not_found_content">Could not find file. Try reopening it from your file browser.</string>
