@@ -1,3 +1,4 @@
+ * Prevent manual creation of existing field name #718
  * Fix search in OTP #780
  * Fix empty OTP field after selection #781
  * Fix same save shared info #783
