@@ -1,3 +1,4 @@
+ * Préviens la création manuelle d'un nom de champ existant #718
  * Correction de la recherche de l'OTP #780
  * Correction de champ OTP vide après sélection #781
  * Correction de la sauvegarde d'une même info partagée #783
